[package]
name = "iplan"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.6", package = "gtk4" }
rusqlite = { version = "0.29", features = ["bundled"] }

[dependencies.adw]
package = "libadwaita"
version = "0.4"
features = ["v1_2"]