[package]
name = "iplan"
version = "1.9.2"
edition = "2021"

[dependencies]
gtk = { version = "0.6", package = "gtk4", features = ["v4_10"] }
rusqlite = { version = "0.29", features = ["bundled"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
ashpd = { version = "0.4.0", features = ["gtk4"] }
linkify = { version = "0.10" }
adw = { package = "libadwaita", version = "0.4", features = ["v1_3"] }
