resource_paths = [
	'hicolor/scalable/apps/ir.imansalmani.iplan.svg',
	'hicolor/512x512/apps/ir.imansalmani.iplan.png',
	'hicolor/256x256/apps/ir.imansalmani.iplan.png',
	'hicolor/128x128/apps/ir.imansalmani.iplan.png',
	'hicolor/scalable/actions/shoe-box-symbolic.svg',
]

install_data(
	resource_paths,
	install_dir: join_paths(get_option('datadir'), 'icons')
)