application_id = 'ir.imansalmani.iplan'

scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)

static_512_dir = join_paths('hicolor', '512x512', 'apps')
install_data(
  join_paths(static_512_dir, ('@0@.png').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', static_512_dir)
)

static_256_dir = join_paths('hicolor', '256x256', 'apps')
install_data(
  join_paths(static_256_dir, ('@0@.png').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', static_256_dir)
)

static_128_dir = join_paths('hicolor', '128x128', 'apps')
install_data(
  join_paths(static_128_dir, ('@0@.png').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', static_128_dir)
)

actions_dir = join_paths('hicolor', 'scalable', 'actions')
install_data(
  [
  	join_paths(actions_dir, 'shoe-box-symbolic.svg'),
  	join_paths(actions_dir, 'view-columns-symbolic.svg'),
  	join_paths(actions_dir, 'list-symbolic.svg'),
  	join_paths(actions_dir, 'profit-symbolic.svg'),
	],
  install_dir: join_paths(get_option('datadir'), 'icons', actions_dir)
)


symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
